<resources>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_details">Details</string>
    <string name="pref_popular_name">Popular</string>
    <string name="pref_top_rated_name">Top Rated</string>
    <string name="pref_favorites_name">Favorites</string>
    <string name="pref_sort_order_title">Sort order</string>
    <string name="title_menu_share">Share</string>

    <string name="header_title">Title</string>
    <string name="header_vote_average">User rating</string>
    <string name="header_release_date">Release date</string>
    <string name="header_overview">Plot synopsis</string>
    <string name="header_videos">Trailers (%1$d)</string>
    <string name="trailer_item">Trailer %1$d</string>
    <string name="header_reviews">Reviews (%1$d)</string>
    <string name="header_author">"Author: "</string>
    <string name="toast_no_internet_connection">Still no Internet connection. Please try again.</string>
    <string name="toast_check_your_internet_connection">Please, check your Internet connection.</string>
    <string name="toast_failed_to_retrieve_data">Failed to retrieve data from server.</string>
    <string name="button_retry">RETRY</string>
    <string name="overview_not_available">Not available</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="favorites_empty">Your favorites list is empty. Click at the star button to add a movie here.</string>

    <string name="success_add_favorites">Successfully added to favorites list</string>
    <string name="fail_add_favorites">Failed to add to favorites list</string>
    <string name="success_remove_favorites">Successfully removed from favorites list</string>
    <string name="fail_remove_favorites">Failed to remove from favorites list</string>
    <string name="please_wait_poster_download">Please, wait until movie poster is fully downloaded</string>

    <!-- Do not translate -->
    <string name="app_name" translatable="false">Popular Movies</string>
    <string name="pref_sort_order_key" translatable="false">sort_order</string>
    <string name="pref_popular_value" translatable="false">popular_value</string>
    <string name="pref_top_rated_value" translatable="false">top_rated_value</string>
    <string name="pref_favorites_value" translatable="false">favorites_value</string>
    <string name="content_authority" translatable="false">com.henriquenfaria.popularmovies</string>

</resources>
